--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-super-grid": "^5.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
