--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -20,6 +23,7 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@tanstack/react-query": "^5.40.1",
+    "@testing-library/react-native": "^12.5.1",
     "@types/react-native": "^0.73.0",
     "axios": "^1.7.2",
     "expo": "~51.0.11",
@@ -46,7 +50,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
